# TSP-Studio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY.md  TSPStudio.pro
data/: dj89.tsp
include/core/: City.h  KDTree.h  TSPStudioManager.h  Tracer.h
include/core/cdt/: LocatorKDTree.h  Triangulation.hpp
include/solvers/: SolverWorker.h
include/ui/: GuiController.h  TSPStudioMapView.h
qml/: main.qml
src/: main.cpp
src/core/: TSPStudioManager.cpp
src/solvers/: SolverWorker.cpp
src/ui/: GuiController.cpp  TSPStudioMapView.cpp
